#65182: add first few widgets for dashboard

--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
@@ -76,13 +76,16 @@
             },
         };
 
-        CHAMELEON.CORE.Charts.generateChart(
-            'chart{{ chartId }}',
-            chartData{{ chartId }}.labels,
-            chartData{{ chartId }}.datasets,
-            chartData{{ chartId }}.options,
-            chartData{{ chartId }}.additionalConfig
-        );
+        window.onload = function () {
+            CHAMELEON.CORE.Charts.generateChart(
+                'chart{{ chartId }}',
+                chartData{{ chartId }}.labels,
+                chartData{{ chartId }}.datasets,
+                chartData{{ chartId }}.options,
+                chartData{{ chartId }}.additionalConfig
+            );
+        };
+
     </script>
 
 {% else %}
