ref #65182: implement system names for stats groups, fix bug with chatJS not initializing of more then one chart is loaded

--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
@@ -76,7 +76,7 @@
             },
         };
 
-        window.onload = function () {
+        document.addEventListener('DOMContentLoaded', function () {
             CHAMELEON.CORE.Charts.generateChart(
                 'chart{{ chartId }}',
                 chartData{{ chartId }}.labels,
@@ -84,7 +84,7 @@
                 chartData{{ chartId }}.options,
                 chartData{{ chartId }}.additionalConfig
             );
-        };
+        });
 
     </script>
 
