#65182: only display sum labels when in statistics window, make displaying sum labels optional, remove unnecessary code

--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
@@ -64,6 +64,7 @@
             },
             additionalConfig: {
                 hasCurrency: {{ group.hasCurrency ? 'true' : 'false' }},
+                displayGraphLabels: {{ displayGraphLabels is not null ? displayGraphLabels : 'false' }},
                 {% if group.getCurrency is not null %}
                 currency: {
                     symbol: '{{ group.getCurrency.symbol }}'
