--- a/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/last-orders.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/last-orders.html.twig
@@ -8,27 +8,44 @@
     <table class="table table-bordered">
         <thead>
         <tr>
-            <th scope="col"><i class="fas fa-receipt"></i></th>
-            <th scope="col"><i class="fas fa-calendar-alt"></i></th>
-            <th scope="col"><i class="fas fa-user"></i></th>
-            <th scope="col"><i class="fas fa-envelope"></i></th>
-            <th scope="col"><i class="fas fa-map-marker-alt"></i></th>
-            <th scope="col"><i class="fas fa-credit-card"></i></th>
-            <th scope="col"><i class="fas fa-euro-sign"></i></th>
-            <th scope="col" title="{{ 'chameleon_system_shop.widget.last_orders_discounts'|trans }}"><i class="fas fa-percentage"></i></th>
-            <th scope="col"><i class="fas fa-cube"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.order_number'|trans|e('html_attr') }}"><i class="fas fa-receipt"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.order_date'|trans|e('html_attr') }}"><i class="fas fa-calendar-alt"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.customer'|trans|e('html_attr') }}"><i class="fas fa-user"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.email'|trans|e('html_attr') }}"><i class="fas fa-envelope"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.user_address'|trans|e('html_attr') }}"><i class="fas fa-map-marker-alt"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.payment_type'|trans|e('html_attr') }}"><i class="fas fa-credit-card"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.order_total'|trans|e('html_attr') }}"><i class="fas fa-euro-sign"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.discount_value'|trans|e('html_attr') }}"><i class="fas fa-percentage"></i></th>
+            <th scope="col" title="{{ 'chameleon_system_shop.widget.order_item_count'|trans|e('html_attr') }}"><i class="fas fa-cube"></i></th>
         </tr>
         </thead>
     {% for orderDataModel in orders %}
-        <tr class="{% if orderDataModel.isOrderCanceled %}table-warning{% elseif not orderDataModel.isPaymentSuccessful %}table-danger{% endif %}">
-            <td>{{ orderDataModel.orderNumber }}</td>
+        {% set currency = orderDataModel.orderCurrencyCode %}
+        {% if orderDataModel.orderCurrencySymbol %}
+            {% set currency = orderDataModel.orderCurrencySymbol %}
+        {% endif %}
+
+        {% set warningCssClass = '' %}
+        {% if not orderDataModel.isPaymentSuccessful %}
+            {% set warningCssClass = 'table-danger' %}
+        {% elseif orderDataModel.isOrderCanceled %}
+            {% set warningCssClass = 'table-warning' %}
+        {% endif %}
+
+        {# if discount is more than 30% of the order value, add a warning class #}
+        {% if orderDataModel.orderValue and orderDataModel.discountValue / orderDataModel.orderValue > 0.3 %}
+            {% set warningCssClass = 'table-warning' %}
+        {% endif %}
+
+        <tr class="{{ warningCssClass }}">
+            <td><a href="{{ orderDataModel.detailUrl }}">{{ orderDataModel.orderNumber }}</a></td>
             <td>{{ orderDataModel.orderDate }}</td>
             <td>{{ orderDataModel.customerName }}</td>
             <td>{{ orderDataModel.customerEmail }}</td>
             <td>{{ orderDataModel.customerCountryCode }} - {{ orderDataModel.customerCity }}</td>
             <td>{{ orderDataModel.paymentMethod }}</td>
-            <td>{{ orderDataModel.orderValue }} {{ orderDataModel.orderCurrencyCode }}</td>
-            <td>{{ orderDataModel.discountValue }} {{ orderDataModel.orderCurrencyCode }}</td>
+            <td>{{ orderDataModel.orderValue| number_format(2, ',', '.') }} {{ currency }}</td>
+            <td>{{ orderDataModel.discountValue| number_format(2, ',', '.') }} {{ currency }}</td>
             <td>{{ orderDataModel.orderItemCount }}</td>
         </tr>
     {% endfor %}
