--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/standard.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/standard.html.twig
@@ -14,8 +14,12 @@
     @var ChameleonSystem\EcommerceStatsBundle\Library\DataModel\StatsTableDataModel tableData
 #}
 
-<br/>
 <div class="module-shop-statistic">
+    {% if accessDenied %}
+        <div class="alert alert-danger" role="alert">
+            {{ 'chameleon_system_ecommerce_stats.access_denied'|trans }}
+        </div>
+    {% else %}
     <div class="card standard">
         <div class="card-header d-flex justify-content-between align-items-center">
             <h3 class="mb-0"><i class="fas fa-chart-pie mr-2"></i>{{ 'chameleon_system_ecommerce_stats.headline'|trans }}</h3>
@@ -57,4 +61,5 @@
             {% endif %}
         </div>
     </div>
+    {% endif %}
 </div>
