ref #65487: add shop search status and product status

--- a/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/last-orders.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/last-orders.html.twig
@@ -2,7 +2,7 @@
 
 {% if orders|length == 0 %}
     <div class="alert alert-info">
-        {{ 'hameleon_system_shop.widget.last_orders_not_found'|trans }}
+        {{ 'chameleon_system_shop.widget.last_orders_not_found'|trans }}
     </div>
 {% else %}
     <table class="table table-bordered m-0">
