--- a/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/shop-status.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/shop-status.html.twig
@@ -6,9 +6,21 @@
     @var ChameleonSystem\SearchBundle\DataModel\ShopSearchStatusDataModel searchIndexStatusDataModel
     @var array shopData
 #}
-
-<div class="row g-4">
+<div class="row g-4 mb-4">
     {% set widgetCount = 0 %}
+    <div class="col-6 col-lg-4 col-xl-3 col-xxl-2">
+        <div class="card text-white" style="background-color: {{ generate_color(widgetCount, 5) }} !important;">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="fs-4 fw-semibold">Shop Status:</div>
+                </div>
+                <div class="small text-white text-opacity-75 text-uppercase fw-semibold text-truncate">
+                    &nbsp;
+                </div>
+            </div>
+        </div>
+    </div>
+    {% set widgetCount = widgetCount + 1 %}
     <div class="col-6 col-lg-4 col-xl-3 col-xxl-2">
         <div class="card text-white" style="background-color: {{ generate_color(widgetCount, 5) }} !important;">
             <div class="card-body">
@@ -83,8 +95,3 @@
         </div>
     </div>
 </div>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        initializeWidgetReload("#{{ reloadEventButtonId|e('html_attr') }}");
-    });
-</script>
