#65870: fix twig display error

--- a/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/used-voucher-series.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/used-voucher-series.html.twig
@@ -16,7 +16,7 @@
             data: {
                 labels: [
                     {% for voucherSeries in chartData %}
-                    '{{ voucherSeries.seriesName }}',
+                    '{{ voucherSeries.seriesName | raw }}',
                     {% endfor %}
                 ],
                 datasets: [
