--- a/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/shop-status.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/shop-status.html.twig
@@ -8,18 +8,7 @@
 #}
 <div class="row g-4 mb-4">
     {% set widgetCount = 0 %}
-    <div class="col-6 col-lg-4 col-xl-3 col-xxl-2">
-        <div class="card text-white" style="background-color: {{ generate_color(widgetCount, 5) }} !important;">
-            <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="fs-4 fw-semibold">Shop Status:</div>
-                </div>
-                <div class="small text-white text-opacity-75 text-uppercase fw-semibold text-truncate">
-                    &nbsp;
-                </div>
-            </div>
-        </div>
-    </div>
+{% set shopStatusWidgets %}
     {% set widgetCount = widgetCount + 1 %}
     <div class="col-6 col-lg-4 col-xl-3 col-xxl-2">
         <div class="card text-white" style="background-color: {{ generate_color(widgetCount, 5) }} !important;">
@@ -37,20 +26,20 @@
     </div>
     {% for shop in shopsData %}
         {% set widgetCount = widgetCount + 1 %}
-    <div class="col-6 col-lg-4 col-xl-3 col-xxl-2">
-        <div class="card text-white" style="background-color: {{ generate_color(widgetCount, 5) }} !important;">
-            <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="fs-4 fw-semibold">{{ shop.categoryCount }}</div>
-                    <i class="fas fa-folder fs-1"></i>
-                </div>
-                <div class="small text-white text-opacity-75 text-uppercase fw-semibold text-truncate">
-                    {{ 'chameleon_system_shop.widget.shop_status_widget.active_categories'|trans }}
-                    <i class="fas fa-info-circle" data-toggle="tooltip" title="Shop: {{ shop.name|e('html_attr') }}"></i>
+        <div class="col-6 col-lg-4 col-xl-3 col-xxl-2">
+            <div class="card text-white" style="background-color: {{ generate_color(widgetCount, 5) }} !important;">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="fs-4 fw-semibold">{{ shop.categoryCount }}</div>
+                        <i class="fas fa-folder fs-1"></i>
+                    </div>
+                    <div class="small text-white text-opacity-75 text-uppercase fw-semibold text-truncate">
+                        {{ 'chameleon_system_shop.widget.shop_status_widget.active_categories'|trans }}
+                        <i class="fas fa-info-circle" data-toggle="tooltip" title="Shop: {{ shop.name|e('html_attr') }}"></i>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     {% endfor %}
     {% set widgetCount = widgetCount + 1 %}
     <div class="col-6 col-lg-4 col-xl-3 col-xxl-2">
@@ -94,4 +83,22 @@
             </div>
         </div>
     </div>
+{% endset %}
+
+{% if widgetCount < 6 %}
+    <div class="col-6 col-lg-4 col-xl-3 col-xxl-2">
+        <div class="card text-white" style="background-color: {{ generate_color(widgetCount, 5) }} !important;">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="fs-4 fw-semibold">Shop Status:</div>
+                </div>
+                <div class="small text-white text-opacity-75 text-uppercase fw-semibold text-truncate">
+                    &nbsp;
+                </div>
+            </div>
+        </div>
+    </div>
+{% endif %}
+
+{{ shopStatusWidgets }}
 </div>
