ref #66470 Lazy Load Dashboard Widgets

--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
@@ -77,7 +77,7 @@
             },
         };
 
-        document.addEventListener('DOMContentLoaded', function () {
+        document.addEventListener('widget:loaded', function (event) {
             CHAMELEON.CORE.Charts.generateChart(
                 'chart{{ chartId }}',
                 chartData{{ chartId }}.labels,
