--- a/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/shop-product-status.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/shop-product-status.html.twig
@@ -3,7 +3,10 @@
 </div>
 
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
+    document.addEventListener('widget:loaded', function (event) {
+        if (event?.detail?.widgetId !== 'widget-shop-product-status') {
+            return;
+        }
         const shops = {{ chartData|json_encode|raw }};
 
         const container = document.getElementById('charts-container');
