--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/dashboard-barchart.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/dashboard-barchart.html.twig
@@ -7,28 +7,28 @@
         <canvas id="chart{{ chartId }}"></canvas>
     </div>
     <script>
-        const chartData{{ chartId }} = {
-            labels: {{ statsData.labels|json_encode|raw }},
-            datasets: {{ statsData.datasets|json_encode|raw }},
-            options: {
-                legend: {
-                    display: {{ statsData.datasets | length > 1 ? 'true' : 'false' }}
-                }
-            },
-            additionalConfig: {
-                hasCurrency: {{ statsData.hasCurrency ? 'true' : 'false' }},
-                displayGraphLabels: {{ displayGraphLabels is not null ? displayGraphLabels : 'false' }},
-                currency: {
-                    symbol: '{{ statsData.currency }}'
-                }
-            }
-        };
-
         document.addEventListener('widget:loaded', function (event) {
             if (event?.detail?.serviceAlias !== "{{ widgetId|raw }}") {
                 return;
             }
-            const oldChart = document.getElementById('chart{{ chartId }}').chart;
+            const chartData{{ chartId }} = {
+                labels: {{ statsData.labels|json_encode|raw }},
+                datasets: {{ statsData.datasets|json_encode|raw }},
+                options: {
+                    legend: {
+                        display: {{ statsData.datasets | length > 1 ? 'true' : 'false' }}
+                    }
+                },
+                additionalConfig: {
+                    hasCurrency: {{ statsData.hasCurrency ? 'true' : 'false' }},
+                    displayGraphLabels: {{ displayGraphLabels is not null ? displayGraphLabels : 'false' }},
+                    currency: {
+                        symbol: '{{ statsData.currency }}'
+                    }
+                }
+            };
+
+            const oldChart = Chart.getChart('chart{{ chartId }}');
             if (oldChart) {
                 oldChart.destroy();
             }
