ref #66470 Use constants when checking widget id

--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/dashboard-barchart.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/dashboard-barchart.html.twig
@@ -8,7 +8,7 @@
     </div>
     <script>
         document.addEventListener('widget:loaded', function (event) {
-            if (event?.detail?.serviceAlias !== "{{ widgetId|raw }}") {
+            if (event?.detail?.widgetId !== "{{ widgetId|raw }}") {
                 return;
             }
             const chartData{{ chartId }} = {
