ref #66470 quote widgetId

--- a/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/shop-product-status.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/shop-product-status.html.twig
@@ -4,7 +4,7 @@
 
 <script>
     document.addEventListener('widget:loaded', function (event) {
-        if (event?.detail?.widgetId !== {{ constant('\\ChameleonSystem\\ShopBundle\\Dashboard\\Widgets\\ShopProductStatusWidget::WIDGET_ID') }}) {
+        if (event?.detail?.widgetId !== "{{ constant('\\ChameleonSystem\\ShopBundle\\Dashboard\\Widgets\\ShopProductStatusWidget::WIDGET_ID') }}") {
             return;
         }
         const shops = {{ chartData|json_encode|raw }};
