ref #66891 Add alert class if no data is available in barchart
- also fix an issue with used-voucher-series widget (handling empty data in js)

--- a/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/used-voucher-series.html.twig
+++ b/src/ShopBundle/Resources/views/snippets-cms/Dashboard/Widgets/used-voucher-series.html.twig
@@ -16,6 +16,9 @@
             return;
         }
         const voucherSeries = {{ chartData|json_encode|raw }};
+        if (!voucherSeries || voucherSeries.length === 0) {
+            return;
+        }
 
         const container = document.getElementById('used-vouchers-chart-container');
         const canvas = document.createElement('canvas');
