--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
@@ -88,7 +88,7 @@
         });
     </script>
 {% else %}
-    <div class="chart-no-data-message">
+    <div class="chart-no-data-message alert alert-info">
         {{ 'chameleon_system_ecommerce_stats.form_no_data_for_current_filters' | trans }}
     </div>
 {% endif %}
