ref #66891 Small Fixes for Dashboard
- margin for message if barchart has no data
- margin for use voucher series widget if no data present
- remove dashboard.js from DashboardBaseWidget (handled by CmsDashboardBundle)
- improve empty data handling for barchart widgets

--- a/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
+++ b/src/EcommerceStatsBundle/Resources/views/snippets-cms/ecommerceStats/module/barchart-body.html.twig
@@ -7,7 +7,7 @@
 @var ChameleonSystem\EcommerceStatsBundle\Library\DataModel\StatsGroupDataModel group
 #}
 
-{% if group.groupTotals | length > 0 %}
+{% if group.groupTotals | length > 0 and (statsData.labels | length > 0) %}
     <div>
         <canvas id="chart{{ chartId }}"></canvas>
     </div>
